Fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,6 @@ html {
 }
 
 /* template wrapper for header */
-.template_wrapper{
-    padding-top: 80px;
+.template_wrapper {
+    padding-top: 48px;
 }
